--- a/header.html
+++ b/header.html
@@ -4,4 +4,5 @@
   <meta name="keywords" content="Interactive, Fiction, JavaScript, WebDev, PHP">
   <meta name="author" content="William Neville">
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
