--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="keywords" content="Interactive, Fiction, JavaScript, WebDev, PHP">
   <meta name="author" content="William Neville">
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
   <p>This is a test. Hello, World!</p>
