--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div id="footer">
   <p>Author: William Neville</p>
   <p>Made using PHP</p>
   <p><a href="http://cims.nyu.edu/~wvn204">Back to Assignments</a></p>
