adding PHP functionality

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       </p>
       <p>
         <label>Please enter your gender:</label> 
-        <input type="radio" name="gender" value="male">Male
+        <input type="radio" name="gender" value="male" selected>Male
         <input type="radio" name="gender" value="female">Female
       </p>
       <p>
         <label>What's your current mood?</label>
-        <input type="radio" name="punctuation" value=".">Neutral
+        <input type="radio" name="punctuation" value="." selected>Neutral
         <input type="radio" name="punctuation" value="...">Depressed
         <input type="radio" name="punctuation" value="?">Inquisitive
         <input type="radio" name="punctuation" value="??">Confused
@@ -33,6 +33,10 @@
       <p>
         <label>What's your favorite color?</label>
         <input type="text" name="color">
+      </p>
+      <p>
+        <label>Are you feeling swaggy?</label>
+        <input type="checkbox" name="swag" value="swaggy"> Yes, so swaggy
       </p>
       <p>
         <input type="submit" value="Submit">
