--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
         <input type="radio" name="punctuation" value="!!">Ecstatic
       </p>
       <p>
-        <label>What's your favorite color?</label>
+        <label>What's your favorite color? (Default is purple): </label>
         <input type="text" name="color">
       </p>
       <p>
-        <label>What's your favorite animal?</label>
+        <label>What's your favorite animal? : </label>
         <input type="text" name="animal">
       </p>
       <p>
-        <label>Which of these is scariest to you?</label>
+        <label>Which of these is scariest to you? : </label>
         <select name="fear">
           <option value="insect">Insects</option>
           <option value="shadow">Darkness</option>
@@ -47,6 +47,27 @@
           <option value="clown">Clowns (eep!)</option>
           <option value="sparkly vampire">Vampires</option>
           <option value="peering eye">The NSA</option>
+        </select>
+      </p>
+      <p>
+        <label>Please enter a verb in the past tense: </label>
+        <input type="text" name="pastVerb">
+      </p>
+      <p>
+        <label>Please enter a noun (Default is potato): </label>
+        <input type="text" name="weapon">
+      </p>
+      <p>
+        <label>Please choose a number: </label>
+        <select name="times">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
         </select>
       </p>
       <p>
@@ -60,11 +81,11 @@
         <p>&nbsp;</p>
       </div>
     </form>
-    <div id="footer">
-      <p>Author: William Neville</p>
-      <p>Made using PHP</p>
-      <p><a href="http://cims.nyu.edu/~wvn204">Back to Assignments</a></p>
-    </div><!--./footer-->
   </div><!--./container-->
+  <div id="footer">
+    <p>Author: William Neville</p>
+    <p>Made using PHP</p>
+    <p><a href="http://cims.nyu.edu/~wvn204">Back to Assignments</a></p>
+  </div><!--./footer-->
 </body>
 </html>
