all functionality done, testing and debugging now

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <input type="text" name="color">
       </p>
       <p>
-        <label>What's your favorite animal? : </label>
+        <label>What's your favorite animal? (Singular, not plural, please) : </label>
         <input type="text" name="animal">
       </p>
       <p>
